--- a/.editorconfig
+++ b/.editorconfig
@@ -2,7 +2,7 @@
 indent_size=2
 max_line_length=120
 fsharp_indent_on_try_with=true
-# fsharp_max_value_binding_width=120
-# fsharp_max_dot_get_expression_width=120
+fsharp_max_value_binding_width=120
+fsharp_max_dot_get_expression_width=120
 fsharp_multiline_block_brackets_on_same_column=true
 fsharp_align_function_signature_to_indentation=true
