--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,5 +1,3 @@
 {
-    "recommendations": [
-        "ms-dotnettools.dotnet-interactive-vscode"
-    ]
+  "recommendations": ["ms-dotnettools.dotnet-interactive-vscode"]
 }
